--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "es6-promise": "^3.2.1",
+    "express": "^4.16.2",
     "immutable": "^3.8.1",
     "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.3.1",
